--- a/android-developer.html
+++ b/android-developer.html
@@ -112,11 +112,11 @@ accepted) at Kapten.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oD5J7fwi'>The Havas Group Careers - Senior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oD5J7fwi'>The Havas Group Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -136,7 +136,7 @@ accepted) at Kapten.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://transfergo.workable.com/j/6B82E80C3F'>TransferGo - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://transfergo.workable.com/j/6B82E80C3F'>TransferGo - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -172,7 +172,7 @@ published: 20.05.2019). Apply now or check the other available jobs.</p>
 <p>Jul 10, 2019 ... 0708 - Stong Mid Android Developer. ????, ??????? Full-time. Our client is a 
 European software development company providing services worldwide since?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/truecaller/jobs/1784965'>Job Application for Insights -Android Developer at Truecaller</a></h5> 
+<h5><a href='https://boards.greenhouse.io/truecaller/jobs/1784965'>Job Application for Insights -Android Developer at Truecaller</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -200,7 +200,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Austin, TX Melbourne</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/0b2e5ac4-d0bc-45d1-b432-842ed05ebc39'>vpTech - Android Developer H/F</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/0b2e5ac4-d0bc-45d1-b432-842ed05ebc39'>vpTech - Android Developer H/F</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -244,7 +244,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4316580002'>Job Application for Android Developer at Ocado</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4316580002'>Job Application for Android Developer at Ocado</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -260,7 +260,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lagash/d73314a3-1510-429b-8fa2-64c9d2f0b826'>Lagash - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/lagash/d73314a3-1510-429b-8fa2-64c9d2f0b826'>Lagash - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Hace 3 d?as ... Android Developer. Buenos Aires. Operations ? Developers. Full time. Apply for 
 this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...</p>
@@ -301,11 +301,11 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coinsquare/dc741e0d-d11f-48a4-8935-e5164bd88895'>Coinsquare - Android Developer - Kotlin</a></h5> 
+<h5><a href='https://jobs.lever.co/coinsquare/dc741e0d-d11f-48a4-8935-e5164bd88895'>Coinsquare - Android Developer - Kotlin</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999691549861-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999691549861-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -335,13 +335,13 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://gapstars.recruitee.com/o/senior-android-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gapstars.recruitee.com/o/senior-android-developer'>
       Senior Android Developer - Gapstars
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
     Android Developer at SignEasy
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -351,7 +351,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='http://workforcesource.recruiterbox.com/jobs/fk036u8'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://workforcesource.recruiterbox.com/jobs/fk036u8'>
     0708 - Stong Mid Android Developer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -365,7 +365,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-08</p>
 <hr/>
-<h5><a href='http://smashingideas.applytojob.com/apply/pBLtoZ9siW/Android-Developer'>Android Developer - Smashing Ideas - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://smashingideas.applytojob.com/apply/pBLtoZ9siW/Android-Developer'>Android Developer - Smashing Ideas - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -377,7 +377,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/neatorobotics/jobs/4345214002'>Job Application for Senior Android Developer at Neato Robotics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/neatorobotics/jobs/4345214002'>Job Application for Senior Android Developer at Neato Robotics</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -428,7 +428,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205470-senior-android-developer'>Central 1 Credit Union Senior Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205470-senior-android-developer'>Central 1 Credit Union Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
